--- a/index.html
+++ b/index.html
@@ -6,11 +6,40 @@
       content="width=device-widht, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0>
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>Car repair</title>
+
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<div class="container"</div>
+
+<header class="header">
+     <div class="container">
+          <div class="header__wrapper">
+
+                <div class="header__block">
+                      <a href="/" class="header__logo"
+                           <img src="img/logo.png" alt="">
+                  </a>
+            </div>
+    <!-- /header__block -->
+
+    <nav class="nav">
+          <a href="#" class="nav__link">Main</a>
+          <a href="#" class="nav__link">Our services</a>
+          <a href="#" class="nav__link">About</a>
+          <a href="#" class="nav__link">Contacts</a>
+    </nav>
+
+    <div class="header__block">
+          <div class="hearder__lng">
+                <a href="#">Ru</a>
+                <a href="#">En</a>
+          </div>
+    </div>
+
+          <!-- /hearder__wrapper -->
+     </div>
+</header>
 
 </body>
 </html>
