--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
 <meta charset="UTF-8">
-<meta name="viewport".
+<meta name="viewport"
       content="width=device-widht, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0>
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>Car repair</title>
@@ -17,7 +17,7 @@
           <div class="header__wrapper">
 
                 <div class="header__block">
-                      <a href="/" class="header__logo"
+                      <a href="/" class="header__logo">
                            <img src="img/logo.png" alt="">
                   </a>
             </div>
@@ -32,14 +32,19 @@
 
     <div class="header__block">
           <div class="hearder__lng">
-                <a href="#">Ru</a>
-                <a href="#">En</a>
+                <a href="#" class="header__lng-link">Ru</a>
+                <a href="#" class="header__lng-link actives">En</a>
           </div>
     </div>
 
           <!-- /hearder__wrapper -->
      </div>
+
 </header>
+
+<section class="intro">
+      
+</section>
 
 </body>
 </html>
