--- a/index.html
+++ b/index.html
@@ -1,50 +1,68 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-<meta charset="UTF-8">
-<meta name="viewport"
-      content="width=device-widht, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0>
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Car repair</title>
+<html lang="en">
 
-<link rel="stylesheet" href="css/style.css">
+<head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-widht, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <title>Car repair</title>
+
+      <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
 
-<header class="header">
-     <div class="container">
-          <div class="header__wrapper">
+      <header class="header">
+            <div class="container">
+                  <div class="header__wrapper">
 
-                <div class="header__block">
-                      <a href="/" class="header__logo">
-                           <img src="img/logo.png" alt="">
-                  </a>
+                        <div class="header__block">
+                              <a href="/" class="header__logo">
+                                    <img src="img/logo.png" alt="">
+                              </a>
+                        </div>
+                        <!-- /header__block -->
+
+                        <nav class="nav">
+                              <a href="#" class="nav__link">Main</a>
+                              <a href="#" class="nav__link">Our services</a>
+                              <a href="#" class="nav__link">About</a>
+                              <a href="#" class="nav__link">Contacts</a>
+                        </nav>
+
+                        <div class="header__block">
+                              <div class="hearder__lng">
+                                    <a href="#" class="header__lng-link">Ru</a>
+                                    <a href="#" class="header__lng-link active">En</a>
+                              </div>
+                        </div>
+
+                  </div>
+                  <!-- /hearder__wrapper -->
+
             </div>
-    <!-- /header__block -->
+            <!-- /container -->
 
-    <nav class="nav">
-          <a href="#" class="nav__link">Main</a>
-          <a href="#" class="nav__link">Our services</a>
-          <a href="#" class="nav__link">About</a>
-          <a href="#" class="nav__link">Contacts</a>
-    </nav>
+      </header>
 
-    <div class="header__block">
-          <div class="hearder__lng">
-                <a href="#" class="header__lng-link">Ru</a>
-                <a href="#" class="header__lng-link actives">En</a>
-          </div>
-    </div>
+      <section class="intro">
+            <div class="container">
+                  <div class="intro__content">
+                        <div class="intro__block">
+                              <h1 class="intro__title">
+                                    KEEPING YOU ON THE ROAD WITH
+                                    SERVICE YOU CAN TRUST
+                              </h1>
 
-          <!-- /hearder__wrapper -->
-     </div>
-
-</header>
-
-<section class="intro">
-      
-</section>
+                              <a href="#" class="btn">
+                                    Show more
+                              </a>
+                        </div>
+                  </div>
+            </div>
+      </section>
 
 </body>
+
 </html>
