--- a/index.html
+++ b/index.html
@@ -63,6 +63,26 @@
             </div>
       </section>
 
+<section class="info">
+      <div class="container">
+            <div class="info__wrapper">
+                  <div class="info__block">
+                        <div class="info__item">
+                              <div class="info__img">
+                                    <img src="img/call 1.jpg" alt="">
+                              </div>
+                              <h3 class="info__title">
+                                    CALL US NOW 222-222-222
+                              </h3>
+                              <p class="info__text">
+                                    Feel free to call us
+                              </p>
+                        </div>
+                  </div>
+            </div>
+      </div>
+</section>
+
 </body>
 
 </html>
