--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       </header>
 
-      <section class="intro">
+      <section class="intro" style="background-image:url('img/intro_bg.jpg');">
             <div class="container">
                   <div class="intro__content">
                         <div class="intro__block">
@@ -126,8 +126,14 @@
 
             <div class="wrapper">
                   <div class="block">
-                        <div class="services__item">
-                              <div class="services__content">
+                        <a href="#" class="services__item">
+                              <div class="services__content" style="background-image:url('img/iStock-1125646126.jpg');">
+                                    <div class="services__content-item">
+                                    </div>
+                                    <div class="services__img">
+                                          <img src="img/Vector.svg" alt="">
+
+                                    </div>
                                     <p class="services__text">
                                           ANNUAL CHECKUPS FROM YOUR PHYSICIAN KEEP YOU IN GOOD HEALTH
                                     </p>
@@ -135,11 +141,37 @@
                               <h3 class="services__title">
                                     DIAGNOSTIC
                               </h3>
-                        </div>
-
-
+                        </a>
                   </div>
-
+                  <div class="block">
+                        <a href="#" class="services__item">
+                              <div class="services__content" style="background-image:url('img/iStock-1125646126.jpg');">
+                                    <div class="services__content-item">
+                                    </div>
+                                    <div class="services__img">
+                                          <img src="img/iStock-1227609937 1.jpg" alt="">
+                                    </div>
+                              </div>
+                              <h3 class="services__title">
+                                    TIRES & WHEELS
+                              </h3>
+                        </a>
+                  </div>
+                  <div class="block">
+                        <a href="#" class="services__item">
+                              <div class="services__content" style="background-image:url('img/iStock-1125646126.jpg');">
+                                    <div class="services__content-item">
+                                    </div>
+                                    <div class="services__img">
+                                          <img src="img/iStock-544604266-1 1.jpg" alt="">
+                                    </div>
+                              </div>
+                              <h3 class="services__title">
+                                    ENGINES
+                              </h3>
+                        </a>
+                  </div>
+            </div>
       </div>
 </section>
 
