--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                               <div class="info__img">
                                     <img src="img/call 1.jpg" alt="">
                               </div>
-                              <h3 class="info__title">
+                              <h4 class="info__title">
                                     CALL US NOW 222-222-222
-                              </h3>
+                              </h4>
                               <p class="info__text">
                                     Feel free to call us
                               </p>
@@ -85,9 +85,9 @@
                               <div class="info__img">
                                     <img src="img/calendar 2.jpg" alt="">
                               </div>
-                              <h3 class="info__title">
+                              <h4 class="info__title">
                                     GET FREE APPOITMET
-                              </h3>
+                              </h4>
                               <p class="info__text">
                                     Free Diagnosis & Brake Checks
                               </p>
@@ -99,9 +99,9 @@
                               <div class="info__img">
                                     <img src="img/maps-and-flags 1.jpg" alt="">
                               </div>
-                              <h3 class="info__title">
+                              <h4 class="info__title">
                                     FIND US ON MAP
-                              </h3>
+                              </h4>
                               <p class="info__text">
                                     New York, 1286 Ruumu Nanor
                               </p>
@@ -184,7 +184,7 @@
 </section>
 
 
-<section class="about">
+<section class="section about">
       <div class="container">
             <div class="about__wrapper">
                   <div class="about__block">
@@ -199,12 +199,53 @@
                               </a>
                   </div>
                   <!-- /about__block -->
+
+                  <img src="img/about__img.jpg"" class="about__img">
             </div>
             <!-- /about__wrapper -->
       </div>
       <!-- /about__container -->
 </section>
 
+<section class="section process">
+      <div class="container">
+                  <h2 class="process__title">FAST & EASY</h2>
+                  <h3 class="process__subtitle">our work process</h3>
+
+                  <div class="wrapper">
+                        <div class="block">
+                              <div class="process__item">
+                                    <h4 class="info__title">1.Request your quote</h4>
+                              <p class="info__text">
+                                    We will be there when you most need us
+                              </p>
+                              </div>
+                        </div>
+                        <div class="block">
+                              <div class="process__item">
+                                    <h4 class="info__title">02. BRING YOUR VEHICLE</h4>
+                              <p class="info__text">
+                                    We are car guys at heart
+                              </p>
+                              </div>
+                        </div>
+                        <div class="block">
+                              <div class="process__item">
+                                    <h4 class="info__title">03. GET IT REPAIRED</h4>
+                              <p class="info__text">
+                                    High quality, low cost car servicing
+                              </p>
+                              </div>
+                        </div>   
+                  </div>
+                     
+      </div>
+      <!-- container-->
+</section>
+
+
+<div style="height: 40vh;"></div>
+<!-- delete -->
 
 </body>
 </html>
