--- a/index.html
+++ b/index.html
@@ -243,6 +243,45 @@
       <!-- container-->
 </section>
 
+<section class="contacts">
+      <div class="container">
+            <h2 class="block__title text-white">
+                  Contact us
+            </h2>
+
+            <form class="contacts__form" action=" ">
+                  <div class="form__row">
+                        <div class="form__group">
+                            <input type="text" class="input" placeholder=" ">
+                            <label for="" class="label">
+                              Name
+                            </label>
+                        </div>
+                        <div class="form__group">
+                              <input type="text" class="input" placeholder=" ">
+                              <label for="" class="label">
+                              Last Name
+                              </label>
+                        </div>
+                  </div>
+                  <div class="form__row">
+                        <div class="form__group">
+                            <input type="email" class="input" placeholder=" ">
+                            <label for="" class="label">
+                              email
+                            </label>
+                        </div>
+                        <div class="form__group">
+                              <input type="tel" class="input" placeholder=" ">
+                              <label for="" class="label">
+                              Phone
+                              </label>
+                        </div>
+                  </div>
+            </form>
+      </div>
+</section>
+
 
 <div style="height: 40vh;"></div>
 <!-- delete -->
