--- a/index.html
+++ b/index.html
@@ -249,20 +249,22 @@
                   Contact us
             </h2>
 
-            <form class="contacts__form" action=" ">
+            <form class="contacts__form" action="">
                   <div class="form__row">
                         <div class="form__group">
                             <input type="text" class="input" placeholder=" ">
                             <label for="" class="label">
-                              Name
+                                  name
                             </label>
                         </div>
+                       <div class="form__row">
                         <div class="form__group">
                               <input type="text" class="input" placeholder=" ">
                               <label for="" class="label">
-                              Last Name
+                                    Last Name
                               </label>
                         </div>
+                       </div>
                   </div>
                   <div class="form__row">
                         <div class="form__group">
@@ -271,13 +273,26 @@
                               email
                             </label>
                         </div>
-                        <div class="form__group">
-                              <input type="tel" class="input" placeholder=" ">
-                              <label for="" class="label">
-                              Phone
-                              </label>
+                        <div class="form__row">
+                              <div class="form__group">
+                                    <input type="tel" class="input" placeholder=" ">
+                                    <label for="" class="label">
+                                          Phone
+                                    </label>
+                              </div>
+                        </div>
+                        <div class="form__row">
+                              <div class="form__group">
+                                    <textarea class="textarea" placeholder=" " name=""></textarea>
+                                    <label for="" class="label">
+                                          Message
+                                    </label>
+                              </div>
                         </div>
                   </div>
+                  <button class="btn" type="submit">
+                        Send
+                  </button>
             </form>
       </div>
 </section>
